Updated List Items on HTML

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <br>
             <li id="q2">What is the name of Kendrick Lamar's first album?
                 <br><input type="radio" name="q2" value ="a">Damn</li id="a2">
-                <input type="radio" name="q2" value ="b">Good Kid Maad City</li="a2">
+                <input type="radio" name="q2" value ="b">Good Kid Maad City</li id="a2">
                 <br><input type="radio" name="q2" value ="c">Section 80</li id="a2">
                 <br>
             <li id="q3">J. Cole is extremely popular for what reason?
